[gd_scene load_steps=7 format=3 uid="uid://ccxbpogh4na0x"]

[ext_resource type="PackedScene" uid="uid://bjdch1vt0u3qe" path="res://Scenes/UI/TileSelector.tscn" id="1_p3h20"]
[ext_resource type="Script" path="res://Scripts/UI/PlannerUI.gd" id="1_wubfe"]
[ext_resource type="Theme" uid="uid://b0urpy7o51mus" path="res://Themes/MenuBar.tres" id="2_ock22"]
[ext_resource type="PackedScene" uid="uid://cvkc0yd6fdkx1" path="res://Scenes/UI/SetSelector.tscn" id="3_51qet"]
[ext_resource type="Script" path="res://Scripts/UI/FileButton.gd" id="3_cr31u"]
[ext_resource type="PackedScene" uid="uid://cwjg548hsv7kc" path="res://Scenes/UI/SaveAsDialog.tscn" id="4_v7e5h"]

[node name="PlannerUI" type="Control"]
layout_mode = 3
anchor_right = 0.333
anchor_bottom = 2.745
offset_right = 2116.38
offset_bottom = 1.24011
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wubfe")

[node name="Top" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 2500.0
offset_bottom = 50.0

[node name="Panel" type="Panel" parent="Top"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Top"]
layout_mode = 2
theme = ExtResource("2_ock22")

[node name="FileButton" type="MenuButton" parent="Top/MenuBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "File"
text_overrun_behavior = 3
script = ExtResource("3_cr31u")

[node name="SaveAsDialogControl" parent="Top/MenuBar/FileButton" instance=ExtResource("4_v7e5h")]
visible = false

[node name="Left" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 512.0
offset_bottom = 1789.0
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="Left"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Left"]
layout_mode = 2
split_offset = 256
dragger_visibility = 2

[node name="LeftColumn" type="VSplitContainer" parent="Left/HSplitContainer"]
layout_mode = 2
dragger_visibility = 2

[node name="SetSelectorControl" parent="Left/HSplitContainer/LeftColumn" instance=ExtResource("3_51qet")]
layout_mode = 2

[node name="TileSelectorContainer" type="VSplitContainer" parent="Left/HSplitContainer"]
layout_mode = 2
split_offset = 1500
collapsed = true
dragger_visibility = 2
metadata/_edit_use_anchors_ = true

[node name="TileSelectorControl" parent="Left/HSplitContainer/TileSelectorContainer" instance=ExtResource("1_p3h20")]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Left/HSplitContainer/TileSelectorContainer"]
layout_mode = 2
split_offset = 128
dragger_visibility = 2

[node name="Previous" type="Button" parent="Left/HSplitContainer/TileSelectorContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Prev"
text_overrun_behavior = 3

[node name="Next" type="Button" parent="Left/HSplitContainer/TileSelectorContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Next
"
text_overrun_behavior = 3

[connection signal="save_scene" from="Top/MenuBar/FileButton" to="." method="_on_menu_button_save_scene" binds= [""]]
[connection signal="pressed" from="Left/HSplitContainer/TileSelectorContainer/HSplitContainer/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Left/HSplitContainer/TileSelectorContainer/HSplitContainer/Next" to="." method="_on_next_pressed"]
